Ensure button area is always visible in phone view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,11 +29,15 @@ h1 {
     text-align: center;
     padding: 10px;
     margin: 0;
+    padding-bottom: 85px;
+    background-color: lightgray;
+    position: fixed;
+    margin-top: -50px;
+    width: 100%;
 }
 
 h2 {
-    text-align: left;
-    margin-left: 20px;
+    text-align: center;
     padding: 10px auto;
     line-height: 0px;
     margin-bottom: 31px;
@@ -63,9 +67,11 @@ p {
     display: none;
 } */
 
-/* #initial-menu {
-    display: block;
-} */
+#initial-menu,
+#difficulty-menu {
+    position: sticky;
+    padding-top: 10px;
+}
 
 /* #difficulty-menu {
     display: none;
@@ -87,12 +93,17 @@ p {
 #game-button-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    position: sticky;
+    position: fixed;
+    /* margin-top: 50px; */
+    background-color: lightgray;
+    margin: auto 3% auto -3%;
 }
 
 #game-table {
     display: grid;
     grid-template-columns: repeat(9, 1fr);
+    /* To compensate for fixed positioning of buttons and h1 */
+    padding-top: 95px;
 }
 
 span {
@@ -147,6 +158,7 @@ span {
         display: block;
         position: fixed;
         width: 12%;
+        /* margin-top: -95px; */
     }
 
     #game-table {
@@ -157,8 +169,7 @@ span {
         margin-left: -10px;
     }
 
-    h2 {
-        margin-left: auto;
-        text-align: center;
-    }
+    /* h1 {
+        padding-bottom: 95px;
+    } */
 }
